[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xchem-fragalysis"
version = "0.0.0"
description = "Python module to interact with Fragalysis"
readme = "README.md"
keywords = ["api"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Installation/Setup",
  "Operating System :: POSIX :: Linux",
]
authors = [
  {name = "Alan Christie", email = "achristie@informaticsmatters.com"},
]
maintainers = [
  {name = "Alan Christie", email = "achristie@informaticsmatters.com"},
]
requires-python = ">=3.11"
dependencies = [
    "gemmi>=0.7.5",
    "im-squonk2-client>=6.1.0,<7",
    "ipywidgets>=8.1.8,<9",
    "mypytools>=0.1.15",
    "pandas>=3.0.1,<4",
    "rdkit==2025.9.6",
    "xchem-molparse>=1.0.0,<2",
]

[project.urls]
Repository = "https://github.com/xchem/fragalysis.git"
